--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,21 @@
-requests >= 2.0
-future
+asn1crypto==1.3.0
+certifi==2020.4.5.1
+cffi==1.14.0
+chardet==3.0.4
+click==7.1.1
+cryptography==2.8
+Flask==1.1.2
+future==0.18.2
+gunicorn==20.0.4
+idna==2.9
+itsdangerous==1.1.0
+Jinja2==2.11.1
+MarkupSafe==1.1.1
+pycparser==2.20
+pyOpenSSL==19.1.0
+PySocks==1.7.1
+requests==2.23.0
+six==1.14.0
+urllib3==1.25.8
+Werkzeug==1.0.1
+line-bot-sdk
